# TradeWiser-Pricing-Tool

./: .env  .env.example  API_DOCUMENTATION.md  ai_vision.py  api_service.py  app.py  app.py.bak  app.py.new  auth.py  batch_processor.py  data_cleaning.py  data_crawler.py  data_processor.py  database.py  database_sql.py  database_supabase.py  date_issues.txt  deploy.sh  main.py  map_visualization.py  models.py  nginx-pricing.conf  notification_service.py  price_forecasting.py  pricing_engine.py  pyproject.toml  quality_analyzer.py  requirements.txt  scheduled_crawler.py  schema.sql  tradewiser-pricing-api.service  transportation.py  user_submissions.py  utils.py  visualization.py  weather_analysis.py  wizx_index.py
.streamlit/: config.toml
assets/css/: style.css
assets/samples/: cotton_sample.py  rice_sample.py  wheat_sample.py
attached_assets/: Pasted--AI-Based-Pricing-Curve-Smart-Bidding-Model-Research-Paper-1-Introduction--1743420610588.txt  Pasted-To-develop-a-robust-commodity-valuation-system-akin-to-Orange-Book-Value-OBV-for-used-vehicles-we-1743419937602.txt
data/: .gitkeep  agmarknet_commodities.json  commodity_database.json
docs/: api_reference.md  deployment_guide.md  testing_guide.md  user_guide.md
sdk/: README.md  setup.py
sdk/wizx/: __init__.py  client.py  models.py
tests/: test_api_endpoints.py
ui/components/: __init__.py  header.py  notification_center.py  price_card.py  quality_analyzer_card.py  sidebar.py  stats_card.py
ui/pages/: __init__.py  advanced_analysis.py  dashboard.py  (+3 more)
utils/: __init__.py  date_utils.py  format_utils.py
(+26 files in other folders)
