[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "faiss-cpu>=1.10.0",
    "numpy>=2.2.4",
    "openai>=1.71.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.0",
    "trafilatura>=2.0.0",
]
